<resources>
    <string name="app_name">CPEN_321_M1</string>

    <string name="button_favorite_city">My Favorite City</string>
    <string name="button_phone_details">Phone Details</string>
    <string name="button_login_server">Login + Server Info</string>
    <string name="button_search_building">Search For UBC Building</string>
    <string name="button_search">Search</string>
    <string name="button_see_building_codes">See All Building Codes</string>

    <string name="title_activity_favorite_city">FavoriteCityActivity</string>

    <string name="text_IP_server">Server IP Address:</string>
    <string name="text_IP_client">Client IP Address:</string>
    <string name="text_time_server">Server Local Time:</string>
    <string name="text_time_client">Client Local Time:</string>
    <string name="text_name">My Name:</string>
    <string name="text_user_name">Logged In:</string>
    <string name="text_building_code_placeholder">Building Code</string>
    <string name="text_prompt">Enter a UBC Building Code</string>

    <string name="map_id">3efb1820fed281ff</string>

    <string name="title_activity_show_route">ShowRouteActivity</string>

</resources>